fixed hero overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -467,6 +467,8 @@ textarea {
   #hero {
     flex-direction: column;
     justify-content: center;
+
+    overflow: unset;
   }
 
   #hero-img {
